// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/admin_user_card/admin_user_card should match default snapshot 1`] = `
<div
  className="AdminUserCard"
>
  <div
    className="AdminUserCard__header"
  >
    <ProfilePicture
      hasMention={false}
      isEmoji={false}
      isRHS={false}
      size="xxl"
      src="/api/v4/users/1234/image"
      userId="1234"
      wrapperClass="admin-user-card"
    />
    <div
      className="AdminUserCard__user-info"
    >
      <span>
        Jim
         
        Halpert
      </span>
      <Bullet
        user={
          Object {
            "first_name": "Jim",
            "id": "1234",
            "last_name": "Halpert",
            "nickname": "Big Tuna",
          }
        }
      />
      <span
        className="AdminUserCard__user-nickname"
      >
        Big Tuna
      </span>
    </div>
    <div
      className="AdminUserCard__user-id"
    >
      User ID:
       
      1234
    </div>
  </div>
  <div
    className="AdminUserCard__body"
  />
  <div
    className="AdminUserCard__footer"
  />
</div>
`;

exports[`components/admin_console/admin_user_card/admin_user_card should match snapshot if no first/last name is defined 1`] = `
<div
  className="AdminUserCard"
>
  <div
    className="AdminUserCard__header"
  >
    <ProfilePicture
      hasMention={false}
      isEmoji={false}
      isRHS={false}
      size="xxl"
      src="/api/v4/users/1234/image"
      userId="1234"
      wrapperClass="admin-user-card"
    />
    <div
      className="AdminUserCard__user-info"
    >
      <span>
         
      </span>
      <Bullet
        user={
          Object {
            "first_name": null,
            "id": "1234",
            "last_name": null,
            "nickname": "Big Tuna",
          }
        }
      />
      <span
        className="AdminUserCard__user-nickname"
      >
        Big Tuna
      </span>
    </div>
    <div
      className="AdminUserCard__user-id"
    >
      User ID:
       
      1234
    </div>
  </div>
  <div
    className="AdminUserCard__body"
  />
  <div
    className="AdminUserCard__footer"
  />
</div>
`;

exports[`components/admin_console/admin_user_card/admin_user_card should match snapshot if no first/last name or nickname is defined 1`] = `
<div
  className="AdminUserCard"
>
  <div
    className="AdminUserCard__header"
  >
    <ProfilePicture
      hasMention={false}
      isEmoji={false}
      isRHS={false}
      size="xxl"
      src="/api/v4/users/1234/image"
      userId="1234"
      wrapperClass="admin-user-card"
    />
    <div
      className="AdminUserCard__user-info"
    >
      <span>
         
      </span>
      <Bullet
        user={
          Object {
            "first_name": null,
            "id": "1234",
            "last_name": null,
            "nickname": null,
          }
        }
      />
      <span
        className="AdminUserCard__user-nickname"
      />
    </div>
    <div
      className="AdminUserCard__user-id"
    >
      User ID:
       
      1234
    </div>
  </div>
  <div
    className="AdminUserCard__body"
  />
  <div
    className="AdminUserCard__footer"
  />
</div>
`;

exports[`components/admin_console/admin_user_card/admin_user_card should match snapshot if no nickname is defined 1`] = `
<div
  className="AdminUserCard"
>
  <div
    className="AdminUserCard__header"
  >
    <ProfilePicture
      hasMention={false}
      isEmoji={false}
      isRHS={false}
      size="xxl"
      src="/api/v4/users/1234/image"
      userId="1234"
      wrapperClass="admin-user-card"
    />
    <div
      className="AdminUserCard__user-info"
    >
      <span>
        Jim
         
        Halpert
      </span>
      <Bullet
        user={
          Object {
            "first_name": "Jim",
            "id": "1234",
            "last_name": "Halpert",
            "nickname": null,
          }
        }
      />
      <span
        className="AdminUserCard__user-nickname"
      />
    </div>
    <div
      className="AdminUserCard__user-id"
    >
      User ID:
       
      1234
    </div>
  </div>
  <div
    className="AdminUserCard__body"
  />
  <div
    className="AdminUserCard__footer"
  />
</div>
`;
